Add server files

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,14 @@
 
 <head>
   <title>WebHRRR</title>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
+
 </head>
 
-<body>
-  <h1>Main Template</h1>
+<body style="display:flex;flex-direction: row;align-items: center;justify-content: center;">
+  <div style="width:90vw;height:100vh;background-color: rgb(240, 244, 255)">
+
+  </div>
 
 
 
